--- a/mal_V24.ipynb
+++ b/mal_V24.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "cdfb9346",
    "metadata": {},
    "outputs": [
@@ -185,7 +185,17 @@
     "#Kjør denne cellen så mange ganger dere vil, inntil dere får en baneform dere er fornøyd med.\n",
     "#Når endelig baneform er valgt:\n",
     "#Sett inn skruehøydene med 3 desimaler (m) og fjern kommentarsymbolet (\"#\") i neste linje.\n",
-    "yfast = np.asarray([0.3, 0.257, 0.187, 0.173, 0.214, 0.205, 0.149, 0.159])\n",
+    "yfast = np.asarray([\n",
+    " 0.3,\n",
+    " 0.257,\n",
+    " 0.187,\n",
+    " 0.173,\n",
+    " 0.214,\n",
+    " 0.205,\n",
+    " 0.149,\n",
+    " 0.159\n",
+    "])\n",
+    "\n",
     "#Når endelig baneform er valgt, kan dere gjerne legge inn # i starten på de 8 linjene som beregner yfast[] ovenfor\n",
     "\n",
     "#Beregninger:\n",
@@ -378,6 +388,9 @@
     "    plt.show()\n",
     "\n",
     "# Returns the index of the value that is closest to the parameter value.\n",
+    "# Example - find velocity at x = 0.8:\n",
+    "#   index = closest_index(xs, 0.8)\n",
+    "#   v[index]\n",
     "def closest_index(array, value):\n",
     "    return min(range(len(array)), key=lambda i: np.abs(value - array[i]))\n",
     "\n",
@@ -403,7 +416,7 @@
     "times = [0]\n",
     "dt = 0.01\n",
     "distances = []\n",
-    "velocities = [v[1]]     \n",
+    "velocities = [v[1]]   # Must start with a velocity greater than 0  \n",
     "\n",
     "x_k = dx\n",
     "while x_k < 1.4:\n",
@@ -424,6 +437,7 @@
     "# Ekin(x)\n",
     "Ekin = (1 + c)*M*np.power(v, 2) / 2\n",
     "\n",
+    "# Add friction to this TODO\n",
     "# Etot(x)\n",
     "Etot = Ekin + Epot\n",
     "\n",
