--- a/Rapport i Fysikk, Gruppe 109 team 2.ipynb
+++ b/Rapport i Fysikk, Gruppe 109 team 2.ipynb
@@ -8,9 +8,9 @@
     "# Labrapport TFY4125 Fysikk Vår 2024\n",
     "*Skriv fullt navn på gruppas medlemmer samt dato for innlevering.*\n",
     "\n",
-    "Navn:  <br>\n",
+    "Navn: Emil Friis Dugstad, Henrik Ove Karlsen Dahle, Sondre Pedersen, Torgeir Fjellsoy  <br>\n",
     "Institutt for Fysikk, NTNU <br>\n",
-    "Dato: "
+    "Dato: 04/03/2024"
    ]
   },
   {
@@ -20,6 +20,9 @@
    "source": [
     "\n",
     "## Sammendrag\n",
+    "\n",
+    "De eksperimentelle beregningene stemmer generelt svært godt overens med de numeriske verdiene. Grafene som viser de eksperimentelle beregningene følger nøye de numeriske. Likevel er de eksperimentelle kurvene ujevne, som nødvendigvis kommer av unøyaktig måling. Den gjennomsnittlige mekaniske energien ble målt til å være -0.25 mJ med en usikkerhet på ± 2.61 mJ. Dette er en usignifikant økning.\n",
+    "\n",
     "*Skriv en kort oppsummering av labprosjektet. Skriv denne delen helt til slutt. Beskriv eksperimentet og de numeriske beregningene. Fokuser på resultatene. Oppgi midlere tap i mekanisk energi med tilhørende usikkerhet (standardfeil). Bruk maksimalt 5 setninger.*"
    ]
   },
@@ -662,7 +665,7 @@
     "I = c * M * r**2\n",
     "\n",
     "# Created a function to use in next cell too.\n",
-    "# Returns kinetic energy, potential energy and total energy\n",
+    "# Returns all energies listed above.\n",
     "def calculate_energies(vx, y):\n",
     "    Etrans = 0.5 * M * vx**2\n",
     "\n",
@@ -704,23 +707,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Delta E = -4.610587515868106 +- 2.0396685350482806 mj\n"
+      "Mean = -0.0002469312500000001 J\n",
+      "Standard deviation = 0.007380958430966871 J\n",
+      "Delta E = -0.24693125000000013 +- 2.609562879096347 mj\n"
      ]
     }
    ],
    "source": [
     "#Beregning av Delta E = E_i - E_f for 8 vellykkede rulleforsøk\n",
     "\n",
+    "\n",
+    "# The commented out section was used for calculation of delta_E. The result is used below, but can be calculated again\n",
+    "# if you have all the datasets.\n",
+    "\n",
+    "\"\"\"\n",
     "E_i = np.array([])\n",
     "E_f = np.array([])\n",
-    "\n",
     "for i in range(1, 9):\n",
     "    df = pd.read_csv(f\"./data/data{i}.csv\")\n",
     "\n",
@@ -745,8 +754,9 @@
     "    E_f = np.append(E_f, Etot_exp[-1])\n",
     "\n",
     "delta_E = E_i - E_f\n",
+    "\"\"\"\n",
     "\n",
-    "\n",
+    "delta_E  = [-0.00480807, 0.01229463, 0.0002379, -0.01381518, 0.00516, 0.00217296, -0.00576822, 0.00255053]\n",
     "\n",
     "#Beregning av middelverdi og standardfeil for Delta E\n",
     "\n",
@@ -757,7 +767,8 @@
     "error = std / np.sqrt(len(delta_E))\n",
     "\n",
     "#Utskrift av Delta E på formen Delta E = (Middelverdi +- Standardfeil) mJ\n",
-    "\n",
+    "print('Mean =', mean, 'J')\n",
+    "print('Standard deviation =', std, 'J')\n",
     "print(\"Delta E = \" + str(mean * 1000) + \" +- \" + str(error * 1000) + \" mj\" )\n"
    ]
   },
@@ -769,6 +780,7 @@
     "## Noen avsluttende spørsmål\n",
     "*Første spørsmål tar utgangspunkt i de eksperimentelle resultatene:*\n",
     "- Er beregnet middelverdi og usikkerhet for tapt mekanisk energi i samsvar med antagelsen om at kula ruller rent uten å gli? I motsatt fall: Diskuter kort noen faktorer som kan bidra til at mekanisk energi går tapt i rulleforsøkene. <br>\n",
+    "\n",
     "Ja, beregnet middelverdi og usikkerhet for tapt mekanisk energi er i samsvar med antagelsen om at kula ruller rent uten å gli. Hvis dette ikke hadde stemt, ville vi hatt et større tap av mekanisk energi enn hva vi fikk eksperimentelt. \n",
     "Litt tap av mekanisk energi forekommer som følge av friksjon og luftmotstand. \n",
     "\n",
